<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- Distance Preference List -->
    <ListPreference
        android:defaultValue="@string/pref_distance_twenty_five_value"
        android:entries="@array/pref_distance_option_labels"
        android:entryValues="@array/pref_distance_label_values"
        android:key="@string/pref_distance_key"
        android:title="@string/pref_distance_label" />
    <!-- Cost Preference List -->
    <ListPreference
        android:defaultValue="@string/pref_cost_free_value"
        android:entries="@array/pref_cost_option_labels"
        android:entryValues="@array/pref_cost_values"
        android:key="@string/pref_cost_key"
        android:title="@string/pref_cost_label" />
    <!-- Age Preference List -->
    <ListPreference
        android:defaultValue="@string/pref_age_all_ages_value"
        android:entries="@array/pref_age_option_labels"
        android:entryValues="@array/pref_age_values"
        android:key="@string/pref_age_key"
        android:title="@string/pref_age_label" />
    <!-- Checkbox Preferences -->
    <CheckBoxPreference
        android:defaultValue="@bool/pref_music_value"
        android:key="@string/pref_music_key"
        android:title="@string/pref_music_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_food_drink_value"
        android:key="@string/pref_food_drink_key"
        android:title="@string/pref_food_drink_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_sports_value"
        android:key="@string/pref_sports_key"
        android:title="@string/pref_sports_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_outdoor_value"
        android:key="@string/pref_outdoor_key"
        android:title="@string/pref_outdoor_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_health_fitness_value"
        android:key="@string/pref_health_fitness_key"
        android:title="@string/pref_health_fitness_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_family_friendly_value"
        android:key="@string/pref_family_friendly_key"
        android:title="@string/pref_family_friendly_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_retail_value"
        android:key="@string/pref_retail_key"
        android:title="@string/pref_retail_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_performing_arts_value"
        android:key="@string/pref_performing_arts_key"
        android:title="@string/pref_performing_arts_title" />
    <CheckBoxPreference
        android:defaultValue="@bool/pref_entertainment_value"
        android:key="@string/pref_entertainment_key"
        android:title="@string/pref_entertainment_title" />
</PreferenceScreen>